--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,11 +8,13 @@ greenlet==2.0.2
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+numpy==1.24.2
 packaging==23.0
 psycopg2-binary==2.9.6
 pydantic==1.10.7
 python-dotenv==1.0.0
 PyYAML==6.0
+shapely==2.0.1
 sniffio==1.3.0
 SQLAlchemy==2.0.9
 starlette==0.26.1
