db restore feature

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   db:
     container_name: db
-    image: postgis/postgis
+#    image: postgis/postgis
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     ports:
@@ -11,6 +11,9 @@ services:
       - POSTGRES_DB=map_db
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgresadmin7
+    build:
+      context: ./backend
+      dockerfile: DockerfileDB
   backend:
     build:
       context: ./backend
